Added image to index.html

--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
       <input type="text" name="your name" />
       <input type="submit" />
     </form>
+    <img src="C:\Users\user\Downloads\Background.jpg" alt="500" width="500" />
   </body>
 </html>
