adding link to hello.thml

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
       <input type="text" name="your name" />
       <input type="submit" />
     </form>
+    <a href="hello.html">Hello</a>
+      <br />
     <img src="Background.jpg" alt="500" width="500" />
   </body>
 </html>
