--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <link rel="stylesheet" href="Styles.css" />
     <h1>Payment Form</h1>
     <br />
     <div>Name<textarea></textarea></div>
