adding fevicon.ico to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <link rel="stylesheet" href="Styles.css" />
+    <link
+      rel="favicon"
+      href="favicon.ico?v=2"
+    />
     <h1>Payment Form</h1>
     <br />
     <div>Name<textarea></textarea></div>
