--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="Styles.css" />
     <link
       rel="favicon"
-      href="favicon.ico?v=2"
+      href="favicon.ico"
     />
     <h1>Payment Form</h1>
     <br />
@@ -40,5 +40,6 @@
     <a href="hello.html">Hello</a>
       <br />
     <img src="Background.jpg" alt="500" width="500" />
+    <script src="index.js" charset="UTF-8"></script>
   </body>
 </html>
